# Projects

./: .gitignore
Algorithm and Data Structure/File Meta Data Gathering/: Dockerfile  Instruction.md  metadata.py  run.bat  run.sh
Apartment Price Prediction/: lab2housing.Rmd
Applied Machine Learning/: 02 Linear Regression.ipynb  03 Linear Regression with Tensorflow.ipynb  04 Logistic Regression with Tensorflow.ipynb  05 Multiclass Classification.ipynb
Cover Letter generator/: app.py  chroma_db.ipynb  config.yaml  document_loader.py  pinecone_data_upload.ipynb  rag.py  requirements.txt  resources.md  test.ipynb
Cover Letter generator/Data/: Cold Email Manuals.md
Flight Delay Prediction/: Data Ingestation & Feature Engineering.ipynb  Final Reports.ipynb  Model 1-Logistic Regression (12 months).ipynb  Model 3- XGB (60months).ipynb  Model 4-Nueral Network (60 months).ipynb
HuggingFace Restful API Deployment/: AKS.sh  README.md  built-script.sh  load.js  minikube.sh
HuggingFace Restful API Deployment/mlapi/: Dockerfile  pyproject.toml
Machine Learning System Engineering/lab_3/lab3/: Dockerfile  README.md  pyproject.toml
Machine Learning System Engineering/lab_3/lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
Machine Learning System Engineering/lab_3/lab3/lab3/: main.py
Machine Learning System Engineering/lab_3/lab3/tests/: test_lab3.py
SQL_Acme Gourmet Meals/: project_1_1.ipynb  project_1_2.ipynb  project_1_3.ipynb  project_1_6.ipynb
Social Median Influencer/: social_media_influencer.ipynb
(+33 files in other folders)
